--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,25 @@ node_modules/
 
 # dotenv environment variables file
 .env
+
+
+
+#########
+# dependencies
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
