--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~11.0.6",
     "@angular/platform-browser-dynamic": "~11.0.6",
     "@angular/router": "~11.0.6",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
+    "rxjs-observe": "^2.1.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -29,6 +31,7 @@
     "@angular/compiler-cli": "~11.0.6",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/reflect-metadata": "^0.1.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
